# Ziqpu-L2-Cycle-3

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  deny.toml  docker-compose.yml
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  INSTALL_NOTES.md  pull_request_template.md
.github/workflows/: checks.yml  ci.yml  dco.yml  release.yml
LICENSES/: OFL-1.1.txt
brand/: README.md  tokens.css
crates/agents/: Cargo.toml  README.md
crates/agents/src/: grounded.rs  identity.rs  interpret.rs  interpret_llm.rs  lib.rs  llm_http.rs  main.rs  measure.rs  measure_llm.rs  models.rs  orchestrator.rs  profile.rs  score.rs  tier.rs  tools.rs  traction.rs  types.rs  vin.rs
crates/agents/tests/: loop.rs
crates/astro/: Cargo.toml
crates/astro/src/: astrocartography.rs  lib.rs  relocate.rs
crates/engine/: Cargo.toml
crates/engine/src/: chart.rs  lib.rs  patterns.rs  synastry.rs
crates/engine/tests/: smoke.rs
crates/ephemeris/: Cargo.toml
crates/ephemeris/src/: analytic.rs  anise_backend.rs  chiron.rs  lib.rs
crates/geo/: Cargo.toml
crates/geo/src/: lib.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs  main.rs
crates/model/: Cargo.toml  README.md
crates/model/src/: lib.rs  main.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: main.rs
crates/tickers/: Cargo.toml
crates/tickers/data/: aviation.csv  company_metadata.csv  insurance.csv
crates/tickers/src/: lib.rs
crates/ui/: Cargo.toml  README.md
crates/ui/assets/: ziqpu.css
crates/ui/src/: app.rs  main.rs  preflight.rs  profile.rs  settings.rs  state.rs  vault.rs
crates/ui/src/components/: backstage.rs  birth_input.rs  briefing.rs  checkpoint.rs  fit_card.rs  guardrail.rs  identity.rs  key_field.rs  legend.rs  lock.rs  mod.rs  model_panel.rs  model_picker.rs  onboarding.rs  ranked.rs  settings.rs  setup.rs  wheat_loader.rs  your_sky.rs
datasets/: README.md
datasets/aviation/: README.md  entities.template.csv
datasets/insurance/: README.md
datasets/schools/: README.md
db/: README.md
db/init/: 01_schema.sql  02_seed.sql
docs/: AGENT_CONTEXT.md  PRD-layered-grounding-pipeline.md  PRD.docx  PRD.md  eval-card.md
proxy/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
proxy/src/: worker.js
scripts/: build-tickers-csv.py  db-apply.sh  derive-dates.py  fetch-ephemeris.sh  gen-chiron-table.sh  gen-tickers-csv.sh  run-agent.ps1  run-agent.sh
