[workspace]
resolver = "2"
members = [
    "crates/ephemeris",
    "crates/engine",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
authors = ["Aisling Leiva-Davila"]
repository = "https://github.com/nessaisling-lab/Ziqpu-L2-Cycle-3"
license-file = "LICENSE"

[profile.release]
lto = true
