[package]
name = "agents"
version = "0.0.0"
description = "Ziqpu agents: the two-vizier observe→decide→act loop, human checkpoint, and grounded tool."
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[[bin]]
name = "ziqpu-agent"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
ephemeris = { path = "../ephemeris" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
