[package]
name = "agents"
version = "0.0.0"
description = "Ziqpu agents: the two-vizier observe→decide→act loop, human checkpoint, and grounded tool."
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[[bin]]
name = "ziqpu-agent"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
ephemeris = { path = "../ephemeris" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTPS for the live interpreter paths (Anthropic + OpenAI-compatible/OpenRouter). Pure-Rust rustls
# TLS with bundled Mozilla roots — no OpenSSL, no OS cert store, no `curl.exe` dependency — so it is a
# guaranteed cross-platform build/run (Windows/macOS/Linux). Crucially the API key is set as an
# in-process header and never appears on a process command line (the old curl `-H` argv leak).
ureq = { version = "2", default-features = false, features = ["tls"] }
