[package]
name = "ephemeris"
version = "0.0.0"
description = "Pluggable ephemeris trait for Ziqpu (analytic VSOP87 default; ANISE and Swiss Ephemeris behind features)."
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
# Default permissive backend: pure-Rust VSOP87 (planets) + Meeus (Moon), no data files.
default = ["analytic"]
analytic = ["dep:vsop87"]
# High-accuracy permissive backend: ANISE + JPL DE440 (runtime kernel).
anise-backend = ["dep:anise"]
# Private/commercial backend — native Chiron + houses + best accuracy.
# Intentionally a no-op stub in the public tree; the real impl is not committed here.
swisseph = []

[dependencies]
anise = { version = "0.10.3", optional = true }
vsop87 = { version = "3", optional = true }
