[package]
name = "model"
version = "0.0.0"
description = "Ziqpu local-model benchmark + fetch: pick and pull a local LLM sized to the machine."
publish = false
edition.workspace = true
# rust-version intentionally omitted (like the ui crate): sysinfo's MSRV is above the workspace 1.80
# pin, and gating this crate would falsely fail cargo version checks. The logic itself is 1.80-clean.
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
name = "model"
path = "src/lib.rs"

[[bin]]
name = "ziqpu-model"
path = "src/main.rs"

[dependencies]
# Only `detect_spec` touches this — the tier logic below is dependency-free and unit-tested.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
