[package]
name = "sidecar"
version = "0.0.0"
description = "Ziqpu read-only sidecar: axum API over the engine + ephemeris + Postgres."
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[[bin]]
name = "sidecar"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
engine = { path = "../engine" }
ephemeris = { path = "../ephemeris" }
