[package]
name = "ui"
version = "0.0.0"
description = "Ziqpu desktop UI: a Dioxus front-end that drives the two-vizier loop in-process."
publish = false
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
# NOTE: rust-version is intentionally omitted here. The workspace pins 1.80, but Dioxus 0.6's
# MSRV is higher; gating this crate to 1.80 would falsely fail `cargo` version checks.

[[bin]]
name = "ziqpu-ui"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
agents = { path = "../agents" }
model = { path = "../model" }
geo = { path = "../geo" }
tickers = { path = "../tickers" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
# For `StreamExt` on the coroutine's UnboundedReceiver (rx.next().await) and the worker thread's
# UnboundedSender. Already in the lock (0.3.32) transitively via Dioxus, so this pins no new dep.
futures-util = { version = "0.3", default-features = false }
# Persist the seeker's full birth-input draft to %APPDATA%\Ziqpu\profile.json (see src/profile.rs).
# `SavedProfile`/`SavedPlace` derive Serialize/Deserialize here; the JSON codec writes/reads the file.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS credential vault for hosted-provider API keys (Anthropic/OpenRouter). Stores the secret in the
# platform keystore — Windows Credential Manager (DPAPI), macOS Keychain, Linux Secret Service —
# instead of a plaintext file. Per-OS backends are additive features that each compile only on their
# target; `crypto-rust` keeps the Linux Secret Service path pure-Rust (no OpenSSL), matching the
# `ureq` decision so the whole app stays a guaranteed cross-platform build.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
